tester/testsuite/bad/bad068.jl
int main() { 
    if (true) return 0; 
}
  
// return type must be int
void main() {
    return 0;
}
